<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".PokemonDetails">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <androidx.cardview.widget.CardView
           android:id="@+id/card_view"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginTop="50dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardElevation="0dp"
           app:cardCornerRadius="8dp"
           app:cardBackgroundColor="@color/white">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="587dp"
               android:layout_marginTop="80dp"
               android:gravity="center_horizontal"
               android:orientation="vertical"
               android:padding="16dp">

               <TextView
                   android:id="@+id/name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/pikatchu"
                   android:textColor="@color/black"
                   android:textSize="30sp"
                   android:textStyle="bold" />

               <TextView
                   android:id="@+id/height"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/weight"

                   android:textColor="@color/black"
                   android:textSize="16sp" />

               <TextView
                   android:id="@+id/weight"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/height"

                   android:textColor="@color/black"
                   android:textSize="16sp" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/type"

                   android:textColor="@color/black"
                   android:textSize="16sp" />

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recycler_type"
                   android:layout_width="match_parent"
                   android:layout_height="65dp"
                   android:layout_marginBottom="8dp"></androidx.recyclerview.widget.RecyclerView>


               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/weakness"

                   android:textColor="@color/black"
                   android:textSize="16sp" />

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recycler_weakness"
                   android:layout_width="match_parent"
                   android:layout_height="65dp"
                   android:layout_marginBottom="8dp">


               </androidx.recyclerview.widget.RecyclerView>


               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/prev_evolution"

                   android:textColor="@color/black"
                   android:textSize="16sp" />

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recycler_prev_evolution"
                   android:layout_width="match_parent"
                   android:layout_height="65dp"
                   android:layout_marginBottom="8dp">

               </androidx.recyclerview.widget.RecyclerView>


               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:text="@string/next_evolution"

                   android:textColor="@color/black"
                   android:textSize="16sp" />

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/recycler_next_evolution"
                   android:layout_width="match_parent"
                   android:layout_height="65dp">

               </androidx.recyclerview.widget.RecyclerView>

           </LinearLayout>
       </androidx.cardview.widget.CardView>

       <ImageView
           android:id="@+id/pokemon_image"
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:layout_alignTop="@+id/card_view"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="-50dp"
           android:src="@drawable/ic_launcher_background"
           tools:ignore="ImageContrastCheck" />
   </RelativeLayout>

</RelativeLayout>